# mygui

./: .gitignore  CMakeLists.txt
include/Window/: Window.h
src/window/: Window.cpp
